Bug fixes in server, minor UI update

--- a/src/site.css
+++ b/src/site.css
@@ -9,7 +9,7 @@ body {
     width: 100vw;
     bottom: 0;
     margin-bottom: 5px;
-    color: blue;
+    color: white;
 }
 
 .main-nav li .glyphicon {
