--- a/src/site.css
+++ b/src/site.css
@@ -12,6 +12,13 @@ body {
     color: white;
 }
 
+.custom-col-30 {
+    width: 30%;
+    float: left;
+    position: relative;
+    padding-right: 15px;
+}
+
 .main-nav li .glyphicon {
     margin-right: 10px;
 }
